// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`level offset snapshots - 3×4 combos > lightLevel=0 darkLevel=0 1`] = `
{
  "dark": {
    "accent": "zinc.800",
    "accentForeground": "zinc.50",
    "background": "zinc.950",
    "border": "oklch(100% 0 0 / 0.1)",
    "carbon": "zinc.100",
    "carbonForeground": "zinc.900",
    "card": "zinc.900",
    "cardForeground": "zinc.50",
    "chart1": "blue.700",
    "chart2": "emerald.500",
    "chart3": "amber.500",
    "chart4": "purple.500",
    "chart5": "rose.500",
    "destructive": "red.400",
    "destructiveForeground": "zinc.900",
    "foreground": "zinc.50",
    "info": "blue.400",
    "infoForeground": "zinc.900",
    "input": "oklch(100% 0 0 / 0.15)",
    "muted": "zinc.800",
    "mutedForeground": "zinc.400",
    "popover": "zinc.900",
    "popoverForeground": "zinc.50",
    "primaryForeground": "zinc.900",
    "ring": "indigo.900",
    "secondary": "zinc.800",
    "secondaryForeground": "zinc.50",
    "sidebar": "zinc.900",
    "sidebarAccent": "zinc.800",
    "sidebarAccentForeground": "zinc.50",
    "sidebarBorder": "oklch(100% 0 0 / 0.1)",
    "sidebarForeground": "zinc.50",
    "sidebarPrimaryForeground": "zinc.900",
    "sidebarRing": "indigo.900",
    "success": "green.400",
    "successForeground": "zinc.900",
    "warning": "amber.400",
    "warningForeground": "zinc.900",
  },
  "light": {
    "accent": "zinc.100",
    "accentForeground": "zinc.900",
    "background": "white",
    "border": "zinc.200",
    "carbon": "zinc.800",
    "carbonForeground": "zinc.50",
    "card": "white",
    "cardForeground": "zinc.950",
    "chart1": "orange.600",
    "chart2": "teal.600",
    "chart3": "cyan.900",
    "chart4": "amber.400",
    "chart5": "amber.500",
    "destructive": "red.500",
    "destructiveForeground": "zinc.50",
    "foreground": "zinc.950",
    "info": "blue.500",
    "infoForeground": "zinc.50",
    "input": "zinc.200",
    "muted": "zinc.100",
    "mutedForeground": "zinc.500",
    "popover": "white",
    "popoverForeground": "zinc.950",
    "primary": "indigo.500",
    "primaryForeground": "zinc.50",
    "ring": "indigo.400",
    "secondary": "zinc.100",
    "secondaryForeground": "zinc.900",
    "sidebar": "white",
    "sidebarAccent": "zinc.100",
    "sidebarAccentForeground": "zinc.900",
    "sidebarBorder": "zinc.200",
    "sidebarForeground": "zinc.950",
    "sidebarPrimary": "indigo.500",
    "sidebarPrimaryForeground": "zinc.50",
    "sidebarRing": "indigo.400",
    "success": "green.500",
    "successForeground": "zinc.50",
    "warning": "amber.500",
    "warningForeground": "zinc.50",
  },
  "menuAccent": "subtle",
  "menuColor": "default",
  "name": "zinc-indigo",
  "radius": "md",
  "size": "md",
}
`;

exports[`level offset snapshots - 3×4 combos > lightLevel=0 darkLevel=1 1`] = `
{
  "dark": {
    "accent": "zinc.700",
    "accentForeground": "zinc.50",
    "background": "zinc.900",
    "border": "oklch(100% 0 0 / 0.1)",
    "carbon": "zinc.100",
    "carbonForeground": "zinc.900",
    "card": "zinc.800",
    "cardForeground": "zinc.50",
    "chart1": "blue.700",
    "chart2": "emerald.500",
    "chart3": "amber.500",
    "chart4": "purple.500",
    "chart5": "rose.500",
    "destructive": "red.400",
    "destructiveForeground": "zinc.900",
    "foreground": "zinc.50",
    "info": "blue.400",
    "infoForeground": "zinc.900",
    "input": "oklch(100% 0 0 / 0.15)",
    "muted": "zinc.700",
    "mutedForeground": "zinc.300",
    "popover": "zinc.800",
    "popoverForeground": "zinc.50",
    "primaryForeground": "zinc.900",
    "ring": "indigo.900",
    "secondary": "zinc.700",
    "secondaryForeground": "zinc.50",
    "sidebar": "zinc.800",
    "sidebarAccent": "zinc.700",
    "sidebarAccentForeground": "zinc.50",
    "sidebarBorder": "oklch(100% 0 0 / 0.1)",
    "sidebarForeground": "zinc.50",
    "sidebarPrimaryForeground": "zinc.900",
    "sidebarRing": "indigo.900",
    "success": "green.400",
    "successForeground": "zinc.900",
    "warning": "amber.400",
    "warningForeground": "zinc.900",
  },
  "light": {
    "accent": "zinc.100",
    "accentForeground": "zinc.900",
    "background": "white",
    "border": "zinc.200",
    "carbon": "zinc.800",
    "carbonForeground": "zinc.50",
    "card": "white",
    "cardForeground": "zinc.950",
    "chart1": "orange.600",
    "chart2": "teal.600",
    "chart3": "cyan.900",
    "chart4": "amber.400",
    "chart5": "amber.500",
    "destructive": "red.500",
    "destructiveForeground": "zinc.50",
    "foreground": "zinc.950",
    "info": "blue.500",
    "infoForeground": "zinc.50",
    "input": "zinc.200",
    "muted": "zinc.100",
    "mutedForeground": "zinc.500",
    "popover": "white",
    "popoverForeground": "zinc.950",
    "primary": "indigo.500",
    "primaryForeground": "zinc.50",
    "ring": "indigo.400",
    "secondary": "zinc.100",
    "secondaryForeground": "zinc.900",
    "sidebar": "white",
    "sidebarAccent": "zinc.100",
    "sidebarAccentForeground": "zinc.900",
    "sidebarBorder": "zinc.200",
    "sidebarForeground": "zinc.950",
    "sidebarPrimary": "indigo.500",
    "sidebarPrimaryForeground": "zinc.50",
    "sidebarRing": "indigo.400",
    "success": "green.500",
    "successForeground": "zinc.50",
    "warning": "amber.500",
    "warningForeground": "zinc.50",
  },
  "menuAccent": "subtle",
  "menuColor": "default",
  "name": "zinc-indigo",
  "radius": "md",
  "size": "md",
}
`;

exports[`level offset snapshots - 3×4 combos > lightLevel=0 darkLevel=2 1`] = `
{
  "dark": {
    "accent": "zinc.600",
    "accentForeground": "zinc.50",
    "background": "zinc.800",
    "border": "oklch(100% 0 0 / 0.1)",
    "carbon": "zinc.100",
    "carbonForeground": "zinc.900",
    "card": "zinc.700",
    "cardForeground": "zinc.50",
    "chart1": "blue.700",
    "chart2": "emerald.500",
    "chart3": "amber.500",
    "chart4": "purple.500",
    "chart5": "rose.500",
    "destructive": "red.400",
    "destructiveForeground": "zinc.900",
    "foreground": "zinc.50",
    "info": "blue.400",
    "infoForeground": "zinc.900",
    "input": "oklch(100% 0 0 / 0.15)",
    "muted": "zinc.600",
    "mutedForeground": "zinc.200",
    "popover": "zinc.700",
    "popoverForeground": "zinc.50",
    "primaryForeground": "zinc.900",
    "ring": "indigo.900",
    "secondary": "zinc.600",
    "secondaryForeground": "zinc.50",
    "sidebar": "zinc.700",
    "sidebarAccent": "zinc.600",
    "sidebarAccentForeground": "zinc.50",
    "sidebarBorder": "oklch(100% 0 0 / 0.1)",
    "sidebarForeground": "zinc.50",
    "sidebarPrimaryForeground": "zinc.900",
    "sidebarRing": "indigo.900",
    "success": "green.400",
    "successForeground": "zinc.900",
    "warning": "amber.400",
    "warningForeground": "zinc.900",
  },
  "light": {
    "accent": "zinc.100",
    "accentForeground": "zinc.900",
    "background": "white",
    "border": "zinc.200",
    "carbon": "zinc.800",
    "carbonForeground": "zinc.50",
    "card": "white",
    "cardForeground": "zinc.950",
    "chart1": "orange.600",
    "chart2": "teal.600",
    "chart3": "cyan.900",
    "chart4": "amber.400",
    "chart5": "amber.500",
    "destructive": "red.500",
    "destructiveForeground": "zinc.50",
    "foreground": "zinc.950",
    "info": "blue.500",
    "infoForeground": "zinc.50",
    "input": "zinc.200",
    "muted": "zinc.100",
    "mutedForeground": "zinc.500",
    "popover": "white",
    "popoverForeground": "zinc.950",
    "primary": "indigo.500",
    "primaryForeground": "zinc.50",
    "ring": "indigo.400",
    "secondary": "zinc.100",
    "secondaryForeground": "zinc.900",
    "sidebar": "white",
    "sidebarAccent": "zinc.100",
    "sidebarAccentForeground": "zinc.900",
    "sidebarBorder": "zinc.200",
    "sidebarForeground": "zinc.950",
    "sidebarPrimary": "indigo.500",
    "sidebarPrimaryForeground": "zinc.50",
    "sidebarRing": "indigo.400",
    "success": "green.500",
    "successForeground": "zinc.50",
    "warning": "amber.500",
    "warningForeground": "zinc.50",
  },
  "menuAccent": "subtle",
  "menuColor": "default",
  "name": "zinc-indigo",
  "radius": "md",
  "size": "md",
}
`;

exports[`level offset snapshots - 3×4 combos > lightLevel=0 darkLevel=3 1`] = `
{
  "dark": {
    "accent": "zinc.500",
    "accentForeground": "zinc.50",
    "background": "zinc.700",
    "border": "oklch(100% 0 0 / 0.1)",
    "carbon": "zinc.100",
    "carbonForeground": "zinc.900",
    "card": "zinc.600",
    "cardForeground": "zinc.50",
    "chart1": "blue.700",
    "chart2": "emerald.500",
    "chart3": "amber.500",
    "chart4": "purple.500",
    "chart5": "rose.500",
    "destructive": "red.400",
    "destructiveForeground": "zinc.900",
    "foreground": "zinc.50",
    "info": "blue.400",
    "infoForeground": "zinc.900",
    "input": "oklch(100% 0 0 / 0.15)",
    "muted": "zinc.500",
    "mutedForeground": "zinc.100",
    "popover": "zinc.600",
    "popoverForeground": "zinc.50",
    "primaryForeground": "zinc.900",
    "ring": "indigo.900",
    "secondary": "zinc.500",
    "secondaryForeground": "zinc.50",
    "sidebar": "zinc.600",
    "sidebarAccent": "zinc.500",
    "sidebarAccentForeground": "zinc.50",
    "sidebarBorder": "oklch(100% 0 0 / 0.1)",
    "sidebarForeground": "zinc.50",
    "sidebarPrimaryForeground": "zinc.900",
    "sidebarRing": "indigo.900",
    "success": "green.400",
    "successForeground": "zinc.900",
    "warning": "amber.400",
    "warningForeground": "zinc.900",
  },
  "light": {
    "accent": "zinc.100",
    "accentForeground": "zinc.900",
    "background": "white",
    "border": "zinc.200",
    "carbon": "zinc.800",
    "carbonForeground": "zinc.50",
    "card": "white",
    "cardForeground": "zinc.950",
    "chart1": "orange.600",
    "chart2": "teal.600",
    "chart3": "cyan.900",
    "chart4": "amber.400",
    "chart5": "amber.500",
    "destructive": "red.500",
    "destructiveForeground": "zinc.50",
    "foreground": "zinc.950",
    "info": "blue.500",
    "infoForeground": "zinc.50",
    "input": "zinc.200",
    "muted": "zinc.100",
    "mutedForeground": "zinc.500",
    "popover": "white",
    "popoverForeground": "zinc.950",
    "primary": "indigo.500",
    "primaryForeground": "zinc.50",
    "ring": "indigo.400",
    "secondary": "zinc.100",
    "secondaryForeground": "zinc.900",
    "sidebar": "white",
    "sidebarAccent": "zinc.100",
    "sidebarAccentForeground": "zinc.900",
    "sidebarBorder": "zinc.200",
    "sidebarForeground": "zinc.950",
    "sidebarPrimary": "indigo.500",
    "sidebarPrimaryForeground": "zinc.50",
    "sidebarRing": "indigo.400",
    "success": "green.500",
    "successForeground": "zinc.50",
    "warning": "amber.500",
    "warningForeground": "zinc.50",
  },
  "menuAccent": "subtle",
  "menuColor": "default",
  "name": "zinc-indigo",
  "radius": "md",
  "size": "md",
}
`;

exports[`level offset snapshots - 3×4 combos > lightLevel=1 darkLevel=0 1`] = `
{
  "dark": {
    "accent": "zinc.800",
    "accentForeground": "zinc.50",
    "background": "zinc.950",
    "border": "oklch(100% 0 0 / 0.1)",
    "carbon": "zinc.100",
    "carbonForeground": "zinc.900",
    "card": "zinc.900",
    "cardForeground": "zinc.50",
    "chart1": "blue.700",
    "chart2": "emerald.500",
    "chart3": "amber.500",
    "chart4": "purple.500",
    "chart5": "rose.500",
    "destructive": "red.400",
    "destructiveForeground": "zinc.900",
    "foreground": "zinc.50",
    "info": "blue.400",
    "infoForeground": "zinc.900",
    "input": "oklch(100% 0 0 / 0.15)",
    "muted": "zinc.800",
    "mutedForeground": "zinc.400",
    "popover": "zinc.900",
    "popoverForeground": "zinc.50",
    "primaryForeground": "zinc.900",
    "ring": "indigo.900",
    "secondary": "zinc.800",
    "secondaryForeground": "zinc.50",
    "sidebar": "zinc.900",
    "sidebarAccent": "zinc.800",
    "sidebarAccentForeground": "zinc.50",
    "sidebarBorder": "oklch(100% 0 0 / 0.1)",
    "sidebarForeground": "zinc.50",
    "sidebarPrimaryForeground": "zinc.900",
    "sidebarRing": "indigo.900",
    "success": "green.400",
    "successForeground": "zinc.900",
    "warning": "amber.400",
    "warningForeground": "zinc.900",
  },
  "light": {
    "accent": "zinc.200",
    "accentForeground": "zinc.900",
    "background": "zinc.50",
    "border": "zinc.200",
    "carbon": "zinc.800",
    "carbonForeground": "zinc.50",
    "card": "zinc.50",
    "cardForeground": "zinc.950",
    "chart1": "orange.600",
    "chart2": "teal.600",
    "chart3": "cyan.900",
    "chart4": "amber.400",
    "chart5": "amber.500",
    "destructive": "red.500",
    "destructiveForeground": "zinc.50",
    "foreground": "zinc.950",
    "info": "blue.500",
    "infoForeground": "zinc.50",
    "input": "zinc.200",
    "muted": "zinc.200",
    "mutedForeground": "zinc.600",
    "popover": "zinc.50",
    "popoverForeground": "zinc.950",
    "primary": "indigo.500",
    "primaryForeground": "zinc.50",
    "ring": "indigo.400",
    "secondary": "zinc.200",
    "secondaryForeground": "zinc.900",
    "sidebar": "zinc.50",
    "sidebarAccent": "zinc.200",
    "sidebarAccentForeground": "zinc.900",
    "sidebarBorder": "zinc.200",
    "sidebarForeground": "zinc.950",
    "sidebarPrimary": "indigo.500",
    "sidebarPrimaryForeground": "zinc.50",
    "sidebarRing": "indigo.400",
    "success": "green.500",
    "successForeground": "zinc.50",
    "warning": "amber.500",
    "warningForeground": "zinc.50",
  },
  "menuAccent": "subtle",
  "menuColor": "default",
  "name": "zinc-indigo",
  "radius": "md",
  "size": "md",
}
`;

exports[`level offset snapshots - 3×4 combos > lightLevel=1 darkLevel=1 1`] = `
{
  "dark": {
    "accent": "zinc.700",
    "accentForeground": "zinc.50",
    "background": "zinc.900",
    "border": "oklch(100% 0 0 / 0.1)",
    "carbon": "zinc.100",
    "carbonForeground": "zinc.900",
    "card": "zinc.800",
    "cardForeground": "zinc.50",
    "chart1": "blue.700",
    "chart2": "emerald.500",
    "chart3": "amber.500",
    "chart4": "purple.500",
    "chart5": "rose.500",
    "destructive": "red.400",
    "destructiveForeground": "zinc.900",
    "foreground": "zinc.50",
    "info": "blue.400",
    "infoForeground": "zinc.900",
    "input": "oklch(100% 0 0 / 0.15)",
    "muted": "zinc.700",
    "mutedForeground": "zinc.300",
    "popover": "zinc.800",
    "popoverForeground": "zinc.50",
    "primaryForeground": "zinc.900",
    "ring": "indigo.900",
    "secondary": "zinc.700",
    "secondaryForeground": "zinc.50",
    "sidebar": "zinc.800",
    "sidebarAccent": "zinc.700",
    "sidebarAccentForeground": "zinc.50",
    "sidebarBorder": "oklch(100% 0 0 / 0.1)",
    "sidebarForeground": "zinc.50",
    "sidebarPrimaryForeground": "zinc.900",
    "sidebarRing": "indigo.900",
    "success": "green.400",
    "successForeground": "zinc.900",
    "warning": "amber.400",
    "warningForeground": "zinc.900",
  },
  "light": {
    "accent": "zinc.200",
    "accentForeground": "zinc.900",
    "background": "zinc.50",
    "border": "zinc.200",
    "carbon": "zinc.800",
    "carbonForeground": "zinc.50",
    "card": "zinc.50",
    "cardForeground": "zinc.950",
    "chart1": "orange.600",
    "chart2": "teal.600",
    "chart3": "cyan.900",
    "chart4": "amber.400",
    "chart5": "amber.500",
    "destructive": "red.500",
    "destructiveForeground": "zinc.50",
    "foreground": "zinc.950",
    "info": "blue.500",
    "infoForeground": "zinc.50",
    "input": "zinc.200",
    "muted": "zinc.200",
    "mutedForeground": "zinc.600",
    "popover": "zinc.50",
    "popoverForeground": "zinc.950",
    "primary": "indigo.500",
    "primaryForeground": "zinc.50",
    "ring": "indigo.400",
    "secondary": "zinc.200",
    "secondaryForeground": "zinc.900",
    "sidebar": "zinc.50",
    "sidebarAccent": "zinc.200",
    "sidebarAccentForeground": "zinc.900",
    "sidebarBorder": "zinc.200",
    "sidebarForeground": "zinc.950",
    "sidebarPrimary": "indigo.500",
    "sidebarPrimaryForeground": "zinc.50",
    "sidebarRing": "indigo.400",
    "success": "green.500",
    "successForeground": "zinc.50",
    "warning": "amber.500",
    "warningForeground": "zinc.50",
  },
  "menuAccent": "subtle",
  "menuColor": "default",
  "name": "zinc-indigo",
  "radius": "md",
  "size": "md",
}
`;

exports[`level offset snapshots - 3×4 combos > lightLevel=1 darkLevel=2 1`] = `
{
  "dark": {
    "accent": "zinc.600",
    "accentForeground": "zinc.50",
    "background": "zinc.800",
    "border": "oklch(100% 0 0 / 0.1)",
    "carbon": "zinc.100",
    "carbonForeground": "zinc.900",
    "card": "zinc.700",
    "cardForeground": "zinc.50",
    "chart1": "blue.700",
    "chart2": "emerald.500",
    "chart3": "amber.500",
    "chart4": "purple.500",
    "chart5": "rose.500",
    "destructive": "red.400",
    "destructiveForeground": "zinc.900",
    "foreground": "zinc.50",
    "info": "blue.400",
    "infoForeground": "zinc.900",
    "input": "oklch(100% 0 0 / 0.15)",
    "muted": "zinc.600",
    "mutedForeground": "zinc.200",
    "popover": "zinc.700",
    "popoverForeground": "zinc.50",
    "primaryForeground": "zinc.900",
    "ring": "indigo.900",
    "secondary": "zinc.600",
    "secondaryForeground": "zinc.50",
    "sidebar": "zinc.700",
    "sidebarAccent": "zinc.600",
    "sidebarAccentForeground": "zinc.50",
    "sidebarBorder": "oklch(100% 0 0 / 0.1)",
    "sidebarForeground": "zinc.50",
    "sidebarPrimaryForeground": "zinc.900",
    "sidebarRing": "indigo.900",
    "success": "green.400",
    "successForeground": "zinc.900",
    "warning": "amber.400",
    "warningForeground": "zinc.900",
  },
  "light": {
    "accent": "zinc.200",
    "accentForeground": "zinc.900",
    "background": "zinc.50",
    "border": "zinc.200",
    "carbon": "zinc.800",
    "carbonForeground": "zinc.50",
    "card": "zinc.50",
    "cardForeground": "zinc.950",
    "chart1": "orange.600",
    "chart2": "teal.600",
    "chart3": "cyan.900",
    "chart4": "amber.400",
    "chart5": "amber.500",
    "destructive": "red.500",
    "destructiveForeground": "zinc.50",
    "foreground": "zinc.950",
    "info": "blue.500",
    "infoForeground": "zinc.50",
    "input": "zinc.200",
    "muted": "zinc.200",
    "mutedForeground": "zinc.600",
    "popover": "zinc.50",
    "popoverForeground": "zinc.950",
    "primary": "indigo.500",
    "primaryForeground": "zinc.50",
    "ring": "indigo.400",
    "secondary": "zinc.200",
    "secondaryForeground": "zinc.900",
    "sidebar": "zinc.50",
    "sidebarAccent": "zinc.200",
    "sidebarAccentForeground": "zinc.900",
    "sidebarBorder": "zinc.200",
    "sidebarForeground": "zinc.950",
    "sidebarPrimary": "indigo.500",
    "sidebarPrimaryForeground": "zinc.50",
    "sidebarRing": "indigo.400",
    "success": "green.500",
    "successForeground": "zinc.50",
    "warning": "amber.500",
    "warningForeground": "zinc.50",
  },
  "menuAccent": "subtle",
  "menuColor": "default",
  "name": "zinc-indigo",
  "radius": "md",
  "size": "md",
}
`;

exports[`level offset snapshots - 3×4 combos > lightLevel=1 darkLevel=3 1`] = `
{
  "dark": {
    "accent": "zinc.500",
    "accentForeground": "zinc.50",
    "background": "zinc.700",
    "border": "oklch(100% 0 0 / 0.1)",
    "carbon": "zinc.100",
    "carbonForeground": "zinc.900",
    "card": "zinc.600",
    "cardForeground": "zinc.50",
    "chart1": "blue.700",
    "chart2": "emerald.500",
    "chart3": "amber.500",
    "chart4": "purple.500",
    "chart5": "rose.500",
    "destructive": "red.400",
    "destructiveForeground": "zinc.900",
    "foreground": "zinc.50",
    "info": "blue.400",
    "infoForeground": "zinc.900",
    "input": "oklch(100% 0 0 / 0.15)",
    "muted": "zinc.500",
    "mutedForeground": "zinc.100",
    "popover": "zinc.600",
    "popoverForeground": "zinc.50",
    "primaryForeground": "zinc.900",
    "ring": "indigo.900",
    "secondary": "zinc.500",
    "secondaryForeground": "zinc.50",
    "sidebar": "zinc.600",
    "sidebarAccent": "zinc.500",
    "sidebarAccentForeground": "zinc.50",
    "sidebarBorder": "oklch(100% 0 0 / 0.1)",
    "sidebarForeground": "zinc.50",
    "sidebarPrimaryForeground": "zinc.900",
    "sidebarRing": "indigo.900",
    "success": "green.400",
    "successForeground": "zinc.900",
    "warning": "amber.400",
    "warningForeground": "zinc.900",
  },
  "light": {
    "accent": "zinc.200",
    "accentForeground": "zinc.900",
    "background": "zinc.50",
    "border": "zinc.200",
    "carbon": "zinc.800",
    "carbonForeground": "zinc.50",
    "card": "zinc.50",
    "cardForeground": "zinc.950",
    "chart1": "orange.600",
    "chart2": "teal.600",
    "chart3": "cyan.900",
    "chart4": "amber.400",
    "chart5": "amber.500",
    "destructive": "red.500",
    "destructiveForeground": "zinc.50",
    "foreground": "zinc.950",
    "info": "blue.500",
    "infoForeground": "zinc.50",
    "input": "zinc.200",
    "muted": "zinc.200",
    "mutedForeground": "zinc.600",
    "popover": "zinc.50",
    "popoverForeground": "zinc.950",
    "primary": "indigo.500",
    "primaryForeground": "zinc.50",
    "ring": "indigo.400",
    "secondary": "zinc.200",
    "secondaryForeground": "zinc.900",
    "sidebar": "zinc.50",
    "sidebarAccent": "zinc.200",
    "sidebarAccentForeground": "zinc.900",
    "sidebarBorder": "zinc.200",
    "sidebarForeground": "zinc.950",
    "sidebarPrimary": "indigo.500",
    "sidebarPrimaryForeground": "zinc.50",
    "sidebarRing": "indigo.400",
    "success": "green.500",
    "successForeground": "zinc.50",
    "warning": "amber.500",
    "warningForeground": "zinc.50",
  },
  "menuAccent": "subtle",
  "menuColor": "default",
  "name": "zinc-indigo",
  "radius": "md",
  "size": "md",
}
`;

exports[`level offset snapshots - 3×4 combos > lightLevel=2 darkLevel=0 1`] = `
{
  "dark": {
    "accent": "zinc.800",
    "accentForeground": "zinc.50",
    "background": "zinc.950",
    "border": "oklch(100% 0 0 / 0.1)",
    "carbon": "zinc.100",
    "carbonForeground": "zinc.900",
    "card": "zinc.900",
    "cardForeground": "zinc.50",
    "chart1": "blue.700",
    "chart2": "emerald.500",
    "chart3": "amber.500",
    "chart4": "purple.500",
    "chart5": "rose.500",
    "destructive": "red.400",
    "destructiveForeground": "zinc.900",
    "foreground": "zinc.50",
    "info": "blue.400",
    "infoForeground": "zinc.900",
    "input": "oklch(100% 0 0 / 0.15)",
    "muted": "zinc.800",
    "mutedForeground": "zinc.400",
    "popover": "zinc.900",
    "popoverForeground": "zinc.50",
    "primaryForeground": "zinc.900",
    "ring": "indigo.900",
    "secondary": "zinc.800",
    "secondaryForeground": "zinc.50",
    "sidebar": "zinc.900",
    "sidebarAccent": "zinc.800",
    "sidebarAccentForeground": "zinc.50",
    "sidebarBorder": "oklch(100% 0 0 / 0.1)",
    "sidebarForeground": "zinc.50",
    "sidebarPrimaryForeground": "zinc.900",
    "sidebarRing": "indigo.900",
    "success": "green.400",
    "successForeground": "zinc.900",
    "warning": "amber.400",
    "warningForeground": "zinc.900",
  },
  "light": {
    "accent": "zinc.300",
    "accentForeground": "zinc.900",
    "background": "zinc.100",
    "border": "zinc.200",
    "carbon": "zinc.800",
    "carbonForeground": "zinc.50",
    "card": "zinc.100",
    "cardForeground": "zinc.950",
    "chart1": "orange.600",
    "chart2": "teal.600",
    "chart3": "cyan.900",
    "chart4": "amber.400",
    "chart5": "amber.500",
    "destructive": "red.500",
    "destructiveForeground": "zinc.50",
    "foreground": "zinc.950",
    "info": "blue.500",
    "infoForeground": "zinc.50",
    "input": "zinc.200",
    "muted": "zinc.300",
    "mutedForeground": "zinc.700",
    "popover": "zinc.100",
    "popoverForeground": "zinc.950",
    "primary": "indigo.500",
    "primaryForeground": "zinc.50",
    "ring": "indigo.400",
    "secondary": "zinc.300",
    "secondaryForeground": "zinc.900",
    "sidebar": "zinc.100",
    "sidebarAccent": "zinc.300",
    "sidebarAccentForeground": "zinc.900",
    "sidebarBorder": "zinc.200",
    "sidebarForeground": "zinc.950",
    "sidebarPrimary": "indigo.500",
    "sidebarPrimaryForeground": "zinc.50",
    "sidebarRing": "indigo.400",
    "success": "green.500",
    "successForeground": "zinc.50",
    "warning": "amber.500",
    "warningForeground": "zinc.50",
  },
  "menuAccent": "subtle",
  "menuColor": "default",
  "name": "zinc-indigo",
  "radius": "md",
  "size": "md",
}
`;

exports[`level offset snapshots - 3×4 combos > lightLevel=2 darkLevel=1 1`] = `
{
  "dark": {
    "accent": "zinc.700",
    "accentForeground": "zinc.50",
    "background": "zinc.900",
    "border": "oklch(100% 0 0 / 0.1)",
    "carbon": "zinc.100",
    "carbonForeground": "zinc.900",
    "card": "zinc.800",
    "cardForeground": "zinc.50",
    "chart1": "blue.700",
    "chart2": "emerald.500",
    "chart3": "amber.500",
    "chart4": "purple.500",
    "chart5": "rose.500",
    "destructive": "red.400",
    "destructiveForeground": "zinc.900",
    "foreground": "zinc.50",
    "info": "blue.400",
    "infoForeground": "zinc.900",
    "input": "oklch(100% 0 0 / 0.15)",
    "muted": "zinc.700",
    "mutedForeground": "zinc.300",
    "popover": "zinc.800",
    "popoverForeground": "zinc.50",
    "primaryForeground": "zinc.900",
    "ring": "indigo.900",
    "secondary": "zinc.700",
    "secondaryForeground": "zinc.50",
    "sidebar": "zinc.800",
    "sidebarAccent": "zinc.700",
    "sidebarAccentForeground": "zinc.50",
    "sidebarBorder": "oklch(100% 0 0 / 0.1)",
    "sidebarForeground": "zinc.50",
    "sidebarPrimaryForeground": "zinc.900",
    "sidebarRing": "indigo.900",
    "success": "green.400",
    "successForeground": "zinc.900",
    "warning": "amber.400",
    "warningForeground": "zinc.900",
  },
  "light": {
    "accent": "zinc.300",
    "accentForeground": "zinc.900",
    "background": "zinc.100",
    "border": "zinc.200",
    "carbon": "zinc.800",
    "carbonForeground": "zinc.50",
    "card": "zinc.100",
    "cardForeground": "zinc.950",
    "chart1": "orange.600",
    "chart2": "teal.600",
    "chart3": "cyan.900",
    "chart4": "amber.400",
    "chart5": "amber.500",
    "destructive": "red.500",
    "destructiveForeground": "zinc.50",
    "foreground": "zinc.950",
    "info": "blue.500",
    "infoForeground": "zinc.50",
    "input": "zinc.200",
    "muted": "zinc.300",
    "mutedForeground": "zinc.700",
    "popover": "zinc.100",
    "popoverForeground": "zinc.950",
    "primary": "indigo.500",
    "primaryForeground": "zinc.50",
    "ring": "indigo.400",
    "secondary": "zinc.300",
    "secondaryForeground": "zinc.900",
    "sidebar": "zinc.100",
    "sidebarAccent": "zinc.300",
    "sidebarAccentForeground": "zinc.900",
    "sidebarBorder": "zinc.200",
    "sidebarForeground": "zinc.950",
    "sidebarPrimary": "indigo.500",
    "sidebarPrimaryForeground": "zinc.50",
    "sidebarRing": "indigo.400",
    "success": "green.500",
    "successForeground": "zinc.50",
    "warning": "amber.500",
    "warningForeground": "zinc.50",
  },
  "menuAccent": "subtle",
  "menuColor": "default",
  "name": "zinc-indigo",
  "radius": "md",
  "size": "md",
}
`;

exports[`level offset snapshots - 3×4 combos > lightLevel=2 darkLevel=2 1`] = `
{
  "dark": {
    "accent": "zinc.600",
    "accentForeground": "zinc.50",
    "background": "zinc.800",
    "border": "oklch(100% 0 0 / 0.1)",
    "carbon": "zinc.100",
    "carbonForeground": "zinc.900",
    "card": "zinc.700",
    "cardForeground": "zinc.50",
    "chart1": "blue.700",
    "chart2": "emerald.500",
    "chart3": "amber.500",
    "chart4": "purple.500",
    "chart5": "rose.500",
    "destructive": "red.400",
    "destructiveForeground": "zinc.900",
    "foreground": "zinc.50",
    "info": "blue.400",
    "infoForeground": "zinc.900",
    "input": "oklch(100% 0 0 / 0.15)",
    "muted": "zinc.600",
    "mutedForeground": "zinc.200",
    "popover": "zinc.700",
    "popoverForeground": "zinc.50",
    "primaryForeground": "zinc.900",
    "ring": "indigo.900",
    "secondary": "zinc.600",
    "secondaryForeground": "zinc.50",
    "sidebar": "zinc.700",
    "sidebarAccent": "zinc.600",
    "sidebarAccentForeground": "zinc.50",
    "sidebarBorder": "oklch(100% 0 0 / 0.1)",
    "sidebarForeground": "zinc.50",
    "sidebarPrimaryForeground": "zinc.900",
    "sidebarRing": "indigo.900",
    "success": "green.400",
    "successForeground": "zinc.900",
    "warning": "amber.400",
    "warningForeground": "zinc.900",
  },
  "light": {
    "accent": "zinc.300",
    "accentForeground": "zinc.900",
    "background": "zinc.100",
    "border": "zinc.200",
    "carbon": "zinc.800",
    "carbonForeground": "zinc.50",
    "card": "zinc.100",
    "cardForeground": "zinc.950",
    "chart1": "orange.600",
    "chart2": "teal.600",
    "chart3": "cyan.900",
    "chart4": "amber.400",
    "chart5": "amber.500",
    "destructive": "red.500",
    "destructiveForeground": "zinc.50",
    "foreground": "zinc.950",
    "info": "blue.500",
    "infoForeground": "zinc.50",
    "input": "zinc.200",
    "muted": "zinc.300",
    "mutedForeground": "zinc.700",
    "popover": "zinc.100",
    "popoverForeground": "zinc.950",
    "primary": "indigo.500",
    "primaryForeground": "zinc.50",
    "ring": "indigo.400",
    "secondary": "zinc.300",
    "secondaryForeground": "zinc.900",
    "sidebar": "zinc.100",
    "sidebarAccent": "zinc.300",
    "sidebarAccentForeground": "zinc.900",
    "sidebarBorder": "zinc.200",
    "sidebarForeground": "zinc.950",
    "sidebarPrimary": "indigo.500",
    "sidebarPrimaryForeground": "zinc.50",
    "sidebarRing": "indigo.400",
    "success": "green.500",
    "successForeground": "zinc.50",
    "warning": "amber.500",
    "warningForeground": "zinc.50",
  },
  "menuAccent": "subtle",
  "menuColor": "default",
  "name": "zinc-indigo",
  "radius": "md",
  "size": "md",
}
`;

exports[`level offset snapshots - 3×4 combos > lightLevel=2 darkLevel=3 1`] = `
{
  "dark": {
    "accent": "zinc.500",
    "accentForeground": "zinc.50",
    "background": "zinc.700",
    "border": "oklch(100% 0 0 / 0.1)",
    "carbon": "zinc.100",
    "carbonForeground": "zinc.900",
    "card": "zinc.600",
    "cardForeground": "zinc.50",
    "chart1": "blue.700",
    "chart2": "emerald.500",
    "chart3": "amber.500",
    "chart4": "purple.500",
    "chart5": "rose.500",
    "destructive": "red.400",
    "destructiveForeground": "zinc.900",
    "foreground": "zinc.50",
    "info": "blue.400",
    "infoForeground": "zinc.900",
    "input": "oklch(100% 0 0 / 0.15)",
    "muted": "zinc.500",
    "mutedForeground": "zinc.100",
    "popover": "zinc.600",
    "popoverForeground": "zinc.50",
    "primaryForeground": "zinc.900",
    "ring": "indigo.900",
    "secondary": "zinc.500",
    "secondaryForeground": "zinc.50",
    "sidebar": "zinc.600",
    "sidebarAccent": "zinc.500",
    "sidebarAccentForeground": "zinc.50",
    "sidebarBorder": "oklch(100% 0 0 / 0.1)",
    "sidebarForeground": "zinc.50",
    "sidebarPrimaryForeground": "zinc.900",
    "sidebarRing": "indigo.900",
    "success": "green.400",
    "successForeground": "zinc.900",
    "warning": "amber.400",
    "warningForeground": "zinc.900",
  },
  "light": {
    "accent": "zinc.300",
    "accentForeground": "zinc.900",
    "background": "zinc.100",
    "border": "zinc.200",
    "carbon": "zinc.800",
    "carbonForeground": "zinc.50",
    "card": "zinc.100",
    "cardForeground": "zinc.950",
    "chart1": "orange.600",
    "chart2": "teal.600",
    "chart3": "cyan.900",
    "chart4": "amber.400",
    "chart5": "amber.500",
    "destructive": "red.500",
    "destructiveForeground": "zinc.50",
    "foreground": "zinc.950",
    "info": "blue.500",
    "infoForeground": "zinc.50",
    "input": "zinc.200",
    "muted": "zinc.300",
    "mutedForeground": "zinc.700",
    "popover": "zinc.100",
    "popoverForeground": "zinc.950",
    "primary": "indigo.500",
    "primaryForeground": "zinc.50",
    "ring": "indigo.400",
    "secondary": "zinc.300",
    "secondaryForeground": "zinc.900",
    "sidebar": "zinc.100",
    "sidebarAccent": "zinc.300",
    "sidebarAccentForeground": "zinc.900",
    "sidebarBorder": "zinc.200",
    "sidebarForeground": "zinc.950",
    "sidebarPrimary": "indigo.500",
    "sidebarPrimaryForeground": "zinc.50",
    "sidebarRing": "indigo.400",
    "success": "green.500",
    "successForeground": "zinc.50",
    "warning": "amber.500",
    "warningForeground": "zinc.50",
  },
  "menuAccent": "subtle",
  "menuColor": "default",
  "name": "zinc-indigo",
  "radius": "md",
  "size": "md",
}
`;
